@@ -16,6 +16,7 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -61,7 +62,7 @@ public final class ComplexVariantCrossCompatibility {
 
     private static boolean actionsOverlap(ComplexVariantReader cvr1, ComplexVariantReader cvr2) {
 
-        if (cvr1.getType() == ActionReader.Type.PST && cvr2.getType() == ActionReader.Type.PST) {
+        if (cvr1.getType() == ActionTypeEnum.PST && cvr2.getType() == ActionTypeEnum.PST) {
 
             // PST actions overlap each others if they both act on a same pst
             Set<String> pst1 = cvr1.getActionReaders().stream()
@@ -74,7 +75,7 @@ public final class ComplexVariantCrossCompatibility {
 
             return !Collections.disjoint(pst1, pst2);
 
-        } else if (cvr1.getType() == ActionReader.Type.TOPO && cvr2.getType() == ActionReader.Type.TOPO) {
+        } else if (cvr1.getType() == ActionTypeEnum.TOPO && cvr2.getType() == ActionTypeEnum.TOPO) {
 
             // TOPO actions overlap each others if they both act on the same network elements, with the same actions
 
@@ -94,8 +95,8 @@ public final class ComplexVariantCrossCompatibility {
 
         // usageRules overlap each others if they are available on a same state
 
-        ActionsSetType ast1 = cvr1.getComplexVariant().getActionsSet().get(0);
-        ActionsSetType ast2 = cvr2.getComplexVariant().getActionsSet().get(0);
+        ActionsSetType ast1 = cvr1.getComplexVariant().getActionsSet().getFirst();
+        ActionsSetType ast2 = cvr2.getComplexVariant().getActionsSet().getFirst();
 
         if (ast1.isPreventive() && ast2.isPreventive()) {
             return true;
@@ -118,8 +119,8 @@ public final class ComplexVariantCrossCompatibility {
 
     private static String getGroupId(ComplexVariantReader cvr) {
         return cvr.getActionReaders().stream()
-                .filter(ar -> ar.getGroupId() != null)
                 .map(ActionReader::getGroupId)
+                .filter(Objects::nonNull)
                 .findAny().orElse("ZZ");
     }
 }
